# RTodo

./: .gitignore  Cargo.toml  README.md  build-cli.py  package-lock.json  package.json
.github/workflows/: build.yml
docs/: README.md  design.md  tasks.md  todo.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/api/: tauri.ts
frontend/src/assets/styles/: main.css
frontend/src/components/common/: ColorPicker.vue  IconPicker.vue
frontend/src/components/group/: GroupManageDialog.vue
frontend/src/components/icon/: logo.vue
frontend/src/components/layout/: Header.vue  MainLayout.vue  MobileNav.vue  Sidebar.vue
frontend/src/components/layout/desktop/: DesktopHeader.vue  DesktopMainLayout.vue  DesktopSidebar.vue
frontend/src/components/layout/mobile/: MobileDrawer.vue  MobileMainLayout.vue  MobileNav.vue  MobileTopBar.vue
frontend/src/components/mobile/app/: MobileDrawer.vue  MobileTopBar.vue
frontend/src/components/tag/: TagCreateDialog.vue  TagManageDialog.vue
frontend/src/components/todo/: CreateTodoDialog.vue  TodoDetailPanel.vue
frontend/src/composables/: useLayout.ts  useTodoFilters.ts  useTodoList.ts
frontend/src/config/: colors.ts  icons.ts
frontend/src/constants/: delays.ts
frontend/src/locales/: en-US.ts  index.ts  ja-JP.ts  zh-CN.ts  zh-TW.ts
frontend/src/router/: index.ts
frontend/src/stores/: group.ts  index.ts  tag.ts  todo.ts  ui.ts
frontend/src/types/: filters.ts  index.ts
frontend/src/utils/: device.ts  priority-helpers.ts  tauri-helpers.ts
frontend/src/views/: AboutView.vue  HomeView.vue  SettingsView.vue  StatsView.vue
frontend/src/views/desktop/: DesktopHomeView.vue  DesktopSettingsView.vue  DesktopStatsView.vue
frontend/src/views/mobile/: MobileHomeView.vue  MobileSettingsView.vue  MobileStatsView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  logging.rs  main.rs
src-tauri/src/commands/: app_commands.rs  attachment_commands.rs  data_manager_command.rs  data_path_commands.rs  group_commands.rs  import_export.rs  log_commands.rs  mod.rs  stats_commands.rs  step_commands.rs  tag_commands.rs  todo_commands.rs
src-tauri/src/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/database/migrations/: mod.rs
src-tauri/src/database/repositories/: attachment_repo.rs  data_repo.rs  group_repo.rs  mod.rs  stats_repo.rs  step_repo.rs  tag_repo.rs  todo_repo.rs
src-tauri/src/models/: attachment.rs  constants.rs  group.rs  mod.rs  stats.rs  step.rs  tag.rs  todo.rs
src-tauri/src/pojo/: mod.rs
src-tauri/src/pojo/request/: attachment.rs  data_path.rs  group.rs  mod.rs  stats.rs  step.rs  tag.rs  todo.rs
src-tauri/src/utils/: data_export.rs  mod.rs
