[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RTodo Team"]
license = "MIT"

[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 数据库
rusqlite = { version = "0.30", features = ["bundled"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
