[package]
name = "rtodo"
version.workspace = true
edition.workspace = true

[package.metadata.bundle]
identifier = "com.rtodo.app"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
tokio.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tauri.workspace = true
tauri-plugin-shell.workspace = true
dirs = "5.0"
toml = "0.8"
serde_derive = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
