[package]
name = "rtodo"
version.workspace = true
edition.workspace = true

[package.metadata.bundle]
identifier = "com.rtodo.app"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
tokio.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-fs.workspace = true
dirs.workspace = true
toml.workspace = true
serde_derive.workspace = true
auto-launch.workspace = true
csv.workspace = true
zip.workspace = true
flate2.workspace = true
mime_guess.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
winreg.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
